fixed overscroll on mobile devices

--- a/styles/movie.css
+++ b/styles/movie.css
@@ -1,4 +1,7 @@
-html{height: 100%;}
+html{
+    height: 100%;
+    overscroll-behavior: none;
+}
 body{
     color: white;
     margin: 0;
