--- a/styles/player.css
+++ b/styles/player.css
@@ -3,6 +3,9 @@ body{
     display: grid;
     place-items: center;
 }
+html{
+    overscroll-behavior: none;
+}
 
 /* small */
 @media not  screen and (min-width: 1100px) {
